# PC1T---Simon-Hohl

./: .gitignore
cv10/: cv10  cv10.cpp  vysledky.txt
cv11/Hudba/: CMakeLists.txt  Hudba.cpp  HudbaDB.cpp  HudbaDB.h
cv2/: autor.txt
cv3/FunExt/: CMakeLists.txt  FunExt.cpp
cv3/lightning/: CMakeLists.txt  lightning.cpp  lightning.h
cv3/square_calc/: CMakeLists.txt  main.c
cv4/leapyear/: CMakeLists.txt  main.c
cv4/prime/: CMakeLists.txt  main.c
cv5/: CMakeLists.txt  vector.cpp  vector.h  vectorMult.cpp  vectorMult.h
cv6/: CMakeLists.txt  cv6.cpp  cv6.h
cv7/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  body2d.cpp
cv8/: CMakeLists.txt  cv8.cpp  cv8.h  hohl.cpp
cv9/: CMakeLists.txt  VectorMath.cpp  cv9.cpp  cv9.h
project/: main  main.cpp  tables-07-11-2024.txt
